data/Java/14-use-uninitialized-primary-variable/4/[M]Error.txt
https://www.sololearn.com/Discuss/1350620/variable-might-not-have-been-initialized
Main.java:9: error: variable result might not have been initialized
                 result= a*i;
                 ^